--- a/.github/workflows/test.yaml
+++ b/.github/workflows/test.yaml
@@ -16,7 +16,7 @@ jobs:
         run: |
           python -m pip install --upgrade pip pytest
           pip3 install flask
-          pip3 install WTForms
+          pip3 install flask-wtf
           pip3 install flask-sqlalchemy
           pip3 install email-validator
           
